test/libsolidity/syntaxTests/nameAndTypeResolution/interface_inheritance.sol
interface A {
}
interface I is A {
}
// ----
// TypeError: (31-32): Interfaces cannot inherit.
